--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-cv_link: assets/files/curriculum_vitae.pdf
+cv_link: assets/files/CV.pdf
 
 
 # Images (e.g., your profile picture and your website's favicon) 
