--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Basic Information 
 title: Yunpeng Niu
-position: Ph.D. Student in Mathematics
-affiliation: Stony Brook University
-email: yunpeng.niu@stonybrook.edu
+affiliation: Max Planck Institute for Mathematics
+email: niu@mpim-bonn.mpg.de
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
